Bug 1211656 - GUM Constraints for screen sharing don't affect stream resolution. r=jib